--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^2.1.6",
     "@elvia/elvis-toolbox": "^1.2.1",
+    "@elvia/elvis-icon": "^1.1.1",
     "classnames": "^2.3.1"
   }
 }
