--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -12,6 +12,7 @@
     "@elvia/elvis-component-wrapper": "^2.1.11",
     "@elvia/elvis-toolbox": "^1.2.1",
     "@elvia/elvis-colors": "^1.2.0",
+    "@elvia/elvis-icon": "^1.1.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
