--- a/packages/elvis-assets-icons/package.json
+++ b/packages/elvis-assets-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-assets-icons",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Elvia icons",
   "license": "MIT",
   "author": "",
@@ -9,6 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
     "watch": "gulp watch"
+  },
+  "dependencies": {
+    "@elvia/elvis-colors": "^1.2.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
