--- a/packages/elvis-assets-icons/package.json
+++ b/packages/elvis-assets-icons/package.json
@@ -14,9 +14,10 @@
     "@elvia/elvis-colors": "^1.2.1"
   },
   "devDependencies": {
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-prettier": "^4.0.0",
     "gulp-svgo": "^2.1.1",
-    "sharp": "^0.26.2",
-    "del": "^6.0.0"
+    "sharp": "^0.26.2"
   }
 }
