--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,8 @@
         "@typescript-eslint/member-delimiter-style": "error",
         "@typescript-eslint/member-ordering": "error",
         "@typescript-eslint/type-annotation-spacing": "error",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react/jsx-key": "off"
       }
     }
   ]
