--- a/packages/web/contentful/.env.template
+++ b/packages/web/contentful/.env.template
@@ -1,10 +1,11 @@
+{* 
+1. Make a copy of this file (place the copy in the same folder) & rename the file to ".env" 
+2. Add the correct key. Keys can be retrived from Contenful:
+    Space id, Access token and Preview access token: https://app.contentful.com/spaces/zez3t3t1iiwd/api/keys/ 
+    Content management tokens: https://app.contentful.com/spaces/zez3t3t1iiwd/api/cma_tokens
+*}
+
 CONTENTFUL_SPACE=
 CONTENTFUL_ACCESS_TOKEN=
 CONTENTFUL_PREVIEW_ACCESS_TOKEN=
 CONTENTFUL_CONTENT_MANAGEMENT_TOKEN=
-
-// COPY & RENAME THIS FILE TO ".env" 
-// KEYS CAN BE RETRIEVED FROM THE CONTENTFUL CMS.
-// https://app.contentful.com/spaces/zez3t3t1iiwd/api/keys/ - Content delivery / preview tokens
-// CONTENTFUL_CONTENT_MANAGEMENT_TOKEN comes from this page
-// https://app.contentful.com/spaces/zez3t3t1iiwd/api/cma_tokens
