--- a/.github/workflows/percy.yaml
+++ b/.github/workflows/percy.yaml
@@ -1,17 +1,17 @@
-name: CI
-on:
-  pull_request:
-    paths:
-      - 'packages/elvis/**'
-jobs:
-  percyTest:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.5
-      - name: Install
-        run: npm install
-      - name: Percy Test
-        run: npm run percy
-        env:
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+# name: CI
+# on:
+#   pull_request:
+#     paths:
+#       - 'packages/elvis/**'
+# jobs:
+#   percyTest:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2.3.5
+#       - name: Install
+#         run: npm install
+#       - name: Percy Test
+#         run: npm run percy
+#         env:
+#           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
