--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
-    "watch": "gulp watch",
-    "percy": "node testing/server.js & percy exec -- node testing/snapshots.js"
+    "watch": "gulp watch"
   },
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
@@ -30,7 +29,6 @@
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.1",
     "express": "^4.17.2",
-    "@percy/script": "^1.1.0",
     "del": "^6.0.0",
     "gulp-tap": "^2.0.0"
   }
