--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     ]
   },
   "scripts": {
+    "start:web": "cd packages/web && yarn contentful && yarn start",
+    "start:components": "cd packages/components && yarn watch",
+    "start:react": "cd packages/components/frameworks/react-ssr && yarn start",
+    "start:vue": "cd packages/components/frameworks/vue-test && yarn start",
     "build:web": "yarn --ignore-optional && cd packages/elvis-assets-icons && yarn run build && cd ../components && yarn run build:production && cd ../web && yarn run contentful:production && yarn run build:production && cd ../components/frameworks/react-ssr && yarn run production",
     "prettier-elvis": "yarn prettier --write \"packages/elvis/**/*.js\"",
     "prettier-doc": "yarn prettier --write \"packages/web/src/**/*.ts\"",
