CMS template doc updated

--- a/packages/web/contentful/.env.template
+++ b/packages/web/contentful/.env.template
@@ -1,8 +1,13 @@
 {* 
 1. Make a copy of this file (place the copy in the same folder) & rename the file to ".env" 
-2. Add the correct key. Keys can be retrived from Contenful:
+2. Log in to Contentful with SSO and use the name 'elvia'. You need to be added to Contentful to log in.
+2. Add the correct key, all keys below are needed. Keys can be retrieved from Contentful:
     Space id, Access token and Preview access token: https://app.contentful.com/spaces/zez3t3t1iiwd/api/keys/ 
     Content management tokens: https://app.contentful.com/spaces/zez3t3t1iiwd/api/cma_tokens
+    
+Access token - Used to fetch the newest entries in Contentful
+Preview access token - Used to fetch content that has not been published yet in Contentful.
+Content management token - Used to fetch types for the content from Contentful.
 *}
 
 CONTENTFUL_SPACE=
