--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
       "packages/components/frameworks/*"
     ],
     "nohoist": [
-      "**/bootstrap",
-      "**/babel-loader",
-      "**/webpack",
-      "**/webpack-dev-server",
-      "**/@elvia/elvis-assets-icons",
-      "**/@elvia/elvis-dropdown",
-      "**/@elvia/elvis-divider",
-      "**/@elvia/elvis-breadcrumb"
+      "**/bootstrap"
     ]
   },
   "scripts": {
@@ -64,23 +57,23 @@
     "prettier": "^2.0.5"
   },
   "devDependencies": {
+    "@date-io/core": "^1.3.6",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
+    "@vue/cli-service": "4.5.13",
     "codelyzer": "^6.0.2",
     "eslint": "^7.17.0",
     "express": "^4.17.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "@vue/cli-service": "4.5.13",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-    "rxjs": "^6.5.3",
-    "zone.js": "~0.11.4",
+    "prop-types": "^15.6.0",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "react-is": ">= 16.8.0",
-    "prop-types": "^15.6.0",
-    "@date-io/core": "^1.3.6",
-    "safe-json-stringify": "^1.2.0"
+    "rxjs": "^6.5.3",
+    "safe-json-stringify": "^1.2.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2",
+    "zone.js": "~0.11.4"
   }
 }
