--- a/packages/components/components/elvis-carousel/package.json
+++ b/packages/components/components/elvis-carousel/package.json
@@ -9,14 +9,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@elvia/elvis-component-wrapper": "^2.2.0",
     "@elvia/elvis-colors": "^1.2.0",
-    "@elvia/elvis-typography": "^1.2.0",
+    "@elvia/elvis-component-wrapper": "^2.2.0",
     "@elvia/elvis-icon": "^1.1.1",
-    "styled-components": "^5.3.3",
-    "classnames": "^2.3.1",
+    "@elvia/elvis-typography": "^1.2.0",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2"
+    "@material-ui/icons": "^4.11.2",
+    "classnames": "^2.3.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "react": "^16.8.0 || ^17.0.0",
