--- a/packages/components/components/elvis-component-wrapper/package.json
+++ b/packages/components/components/elvis-component-wrapper/package.json
@@ -15,6 +15,8 @@
     "react-dom": "*"
   },
   "devDependencies": {
-    "@types/lodash.isequal": "^4.5.5"
+    "@types/lodash.isequal": "^4.5.5",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13"
   }
 }
