--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -7,10 +7,12 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/register": "^7.16.7",
     "@elvia/elvis-accordion": "*",
+    "@elvia/elvis-box": "*",
     "@elvia/elvis-breadcrumb": "*",
     "@elvia/elvis-carousel": "*",
     "@elvia/elvis-chip": "*",
     "@elvia/elvis-datepicker": "*",
+    "@elvia/elvis-divider": "*",
     "@elvia/elvis-dropdown": "*",
     "@elvia/elvis-icon": "*",
     "@elvia/elvis-modal": "*",
@@ -19,8 +21,6 @@
     "@elvia/elvis-progress-linear": "*",
     "@elvia/elvis-tabs": "*",
     "@elvia/elvis-testing": "*",
-    "@elvia/elvis-divider": "*",
-    "@elvia/elvis-box": "*",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "^12.1.10",
@@ -29,14 +29,16 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.27.0",
-    "webpack-dev-server": "3.11.2",
     "@testing-library/dom": ">=7.21.4",
-    "webpack": "^4.0.0 || ^5.0.0"
+    "@vue/cli-service": "^5.0.1",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "webpack": "^4.0.0 || ^5.0.0",
+    "webpack-dev-server": "3.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
