--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@elvia/elvis-components",
   "version": "0.0.1",
-  "private": "true",
   "description": "",
   "license": "ISC",
   "author": "",
@@ -43,16 +42,16 @@
     "jsdom": "^16.6.0",
     "merge-stream": "^2.0.0",
     "mocha": "^8.4.0",
+    "react": "^17.0.0-0",
+    "react-dom": "^17.0.0-0",
+    "react-is": ">= 16.8.0",
     "style-loader": "^1.2.1",
+    "styled-components": ">= 2",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "typescript-plugin-styled-components": "^2.0.0",
     "webpack": "^4.44.2",
-    "webpack-cli": "^4.6.0",
-    "styled-components": ">= 2",
-    "react": "^17.0.0-0",
-    "react-dom": "^17.0.0-0",
-    "react-is": ">= 16.8.0"
+    "webpack-cli": "^4.6.0"
   },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.16.7",
