--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
       "packages/*",
       "packages/components/components/*",
       "packages/components/frameworks/*"
-    ],
-    "nohoist": [
-      "**/bootstrap"
     ]
   },
   "scripts": {
@@ -16,7 +13,7 @@
     "start:components": "cd packages/components && yarn watch",
     "start:react": "cd packages/components/frameworks/react-ssr && yarn start",
     "start:vue": "cd packages/components/frameworks/vue-test && yarn start",
-    "build:web": "yarn --ignore-optional && cd packages/elvis-assets-icons && yarn run build && cd ../components && yarn run build:production && cd ../web && yarn run contentful:production && yarn run build:production && cd ../components/frameworks/react-ssr && yarn run production",
+    "build:web": "yarn && cd packages/elvis-assets-icons && yarn run build && cd ../components && yarn run build:production && cd ../web && yarn run contentful:production && yarn run build:production && cd ../components/frameworks/react-ssr && yarn run production",
     "prettier-elvis": "yarn prettier --write \"packages/elvis/**/*.js\"",
     "prettier-doc": "yarn prettier --write \"packages/web/src/**/*.ts\"",
     "prettier-comp": "yarn prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
