--- a/packages/components/components/elvis-card/package.json
+++ b/packages/components/components/elvis-card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-card",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -14,5 +14,10 @@
     "@elvia/elvis-typography": "^1.2.0",
     "@elvia/elvis-icon": "^1.1.1",
     "styled-components": "^5.3.3"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-is": ">=16.8.0"
   }
 }
