--- a/packages/components/components/elvis-divider/package.json
+++ b/packages/components/components/elvis-divider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-divider",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -12,5 +12,10 @@
     "@elvia/elvis-component-wrapper": "^2.2.0",
     "@elvia/elvis-colors": "^1.2.0",
     "styled-components": "^5.3.3"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-is": ">=16.8.0"
   }
 }
