--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/register": "^7.16.7",
@@ -33,6 +34,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "eslint": "^7.1.0",
     "eslint-plugin-react": "^7.27.0",
     "webpack-dev-server": "3.11.2",
     "@testing-library/dom": ">=7.21.4",
