--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,6 +35,7 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-filter": "^7.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-header": "^2.0.9",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
