update .prettierignore to format components gulpfile.js

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,7 +2,8 @@ dist
 e2e
 node_modules
 coverage
-build
+!packages/compoents/build/gulpfile.js
+packages/compoents/build
 packages/web/src/assets/*
 packages/elvis/.internal/classlist.json
 packages/elvis/css/*.css
