Lego 1542: kompiler scss til css i komponenter (#701)
* change gulp build to convert scss to css

* bump packages using style.scss

* update .prettierignore to format components gulpfile.js

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,7 +2,7 @@ dist
 e2e
 node_modules
 coverage
-build
+packages/components/build/template/*
 packages/web/src/assets/*
 packages/elvis/.internal/classlist.json
 packages/elvis/css/*.css
