--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,7 +9,7 @@
     "build:production": "ng build --configuration production",
     "contentful": "cd contentful && node syncFromContentful.js",
     "contentful:production": "cd contentful && NODE_ENV=production node syncFromContentful.js",
-    "contentful:types": "cd contentful && contentful-typescript-codegen --output __generated__/types.d.ts",
+    "contentful:types": "cd contentful && contentful-typescript-codegen --output types.d.ts",
     "dev": "yarn run contentful & yarn run start",
     "test": "ng test",
     "e2e": "ng e2e"
