--- a/packages/web/angular.json
+++ b/packages/web/angular.json
@@ -28,9 +28,14 @@
               "src/assets",
               "src/_redirects",
               {
-                "glob": "CHANGELOG.md",
-                "input": "../components/components/elvis-box",
-                "output": "./assets/components/changelog"
+                "glob": "**/CHANGELOG.md",
+                "input": "../components/components/",
+                "output": "./assets/changelog"
+              },
+              {
+                "glob": "**/CHANGELOG_new.md",
+                "input": "../components/components/",
+                "output": "./assets/changelog"
               },
               {
                 "glob": "CHANGELOG.md",
