--- a/packages/components/components/elvis-modal/package.json
+++ b/packages/components/components/elvis-modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-modal",
-  "version": "1.4.3-beta.1",
+  "version": "1.4.3",
   "description": "",
   "license": "MIT",
   "author": "",
