--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -13,7 +13,7 @@
     "@elvia/elvis-datepicker": "*",
     "@elvia/elvis-dropdown": "*",
     "@elvia/elvis-icon": "*",
-    "@elvia/elvis-modal": "1.4.3-beta.1",
+    "@elvia/elvis-modal": "*",
     "@elvia/elvis-pagination": "*",
     "@elvia/elvis-popover": "*",
     "@elvia/elvis-progress-linear": "*",
