--- a/packages/components/components/elvis-radio-filter/package.json
+++ b/packages/components/components/elvis-radio-filter/package.json
@@ -9,9 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@elvia/elvis-colors": "^1.2.0",
     "@elvia/elvis-component-wrapper": "^2.2.0",
-    "styled-components": "^5.3.3",
-    "@elvia/elvis-colors": "^1.2.0"
+    "styled-components": "^5.3.3"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
