--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -15,21 +15,24 @@
     "bootstrap": "4.6.1"
   },
   "devDependencies": {
+    "del": "^6.0.0",
     "doiuse": "^4.4.0",
+    "express": "^4.17.2",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-tap": "^2.0.0",
+    "jquery": "1.9.1 - 3",
     "mini-svg-data-uri": "^1.1.3",
+    "popper.js": "^1.16.1",
     "postcss-css-variables": "^0.14.0",
     "resolve": "^1.20.0",
     "sass": "^1.33.0",
-    "yargs-parser": ">=13.1.2",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.1",
-    "express": "^4.17.2",
-    "del": "^6.0.0",
-    "gulp-tap": "^2.0.0"
+    "yargs-parser": ">=13.1.2"
+  },
+  "installConfig": {
+    "hoistingLimits": "workspaces"
   }
 }
