--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^1.0.1"
   },
