--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -52,6 +52,9 @@
     "ngx-markdown": "^13.1.0",
     "prettier": "^2.0.5",
     "prismjs": "^1.24.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
     "rxjs": "^6.5.5",
     "sass": "^1.33.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
