--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -1,14 +1,20 @@
 {
   "name": "@elvia/elvis-colors",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Elvia colors",
   "license": "MIT",
   "author": "",
   "main": "src/elviaColors.js",
   "scripts": {
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "lodash.kebabcase": "^4.1.1"
-  }
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-prettier": "^4.0.0"
+  },
+  "type": "module"
 }
