--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-accordion",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -16,8 +16,8 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "react": "*",
-    "react-dom": "*",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-is": "^16.8.0"
   },
   "peerDependencies": {
