--- a/packages/components/components/elvis-component-wrapper/package.json
+++ b/packages/components/components/elvis-component-wrapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-component-wrapper",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -11,8 +11,8 @@
   "dependencies": {
     "@elvia/elvis-toolbox": "^1.2.1",
     "lodash.isequal": "^4.5.0",
-    "react": "*",
-    "react-dom": "*"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/lodash.isequal": "^4.5.5",
