--- a/packages/components/components/elvis-loader/package.json
+++ b/packages/components/components/elvis-loader/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "classnames": "^2.3.1",
-    "react": "*",
-    "react-dom": "*",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "semver": "^7.3.5"
   }
 }
