--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -11,3 +11,12 @@ plugins:
     spec: '@yarnpkg/plugin-interactive-tools'
 
 yarnPath: .yarn/releases/yarn-berry.js
+
+packageExtensions:
+  # awaiting fix: https://github.com/facebook/create-react-app/issues/11982
+  'eslint-plugin-flowtype@*':
+    peerDependenciesMeta:
+      '@babel/plugin-syntax-flow':
+        optional: true
+      '@babel/plugin-transform-react-jsx':
+        optional: true
