--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "gulp --gulpfile build/gulpfile.js cleanup && gulp --gulpfile build/gulpfile.js && webpack --mode=production --stats=minimal  --config ./webpack.config.js",
     "build:production": "gulp --gulpfile build/gulpfile.js cleanup && gulp --gulpfile build/gulpfile.js production && webpack --mode=production --stats=minimal  --config ./webpack.config.js",
-    "watch": "gulp --gulpfile build/gulpfile.js cleanup && concurrently \"webpack --watch --mode=production --stats=minimal \" \"gulp --gulpfile build/gulpfile.js watch\"",
+    "watch": "concurrently \"webpack --watch --mode=production --stats=minimal \" \"gulp --gulpfile build/gulpfile.js watch\"",
+    "clean": "gulp --gulpfile build/gulpfile.js cleanup",
     "test": "jest --config jest.config.js --colors",
     "test:watch": "jest --config jest.config.js --watch --colors",
     "test:coverage": "jest --coverage --colors"
