--- a/packages/components/components/elvis-popover/package.json
+++ b/packages/components/components/elvis-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-popover",
-  "version": "4.4.0-beta.4",
+  "version": "4.4.0",
   "description": "",
   "license": "MIT",
   "author": "",
