--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint": "./node_modules/.bin/eslint --fix \"./**/*.{js,ts,tsx}\"",
     "lint-all": "yarn run prettier-elvis && yarn run prettier-doc && yarn run prettier-comp && yarn run eslint",
     "component-tests": "cd packages/components; yarn test && echo SUCCESS",
-    "test:staged": "cd packages/components; jest --bail --findRelatedTests"
+    "test:staged": "cd packages/components; jest --bail --findRelatedTests",
+    "publish": "yarn workspaces foreach -ipv --no-private npm publish --access public"
   },
   "husky": {
     "hooks": {
