--- a/packages/components/components/elvis-dropdown/package.json
+++ b/packages/components/components/elvis-dropdown/package.json
@@ -14,11 +14,13 @@
     "@elvia/elvis-icon": "^1.1.1",
     "@elvia/elvis-toolbox": "^1.2.1",
     "@elvia/elvis-typography": "^1.2.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.uniqueid": "4.0.1",
     "react-select": "5.2.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/lodash.isequal": "^4.5.5",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "react-is": ">= 16.8.0"
