--- a/packages/components/components/elvis-chip/package.json
+++ b/packages/components/components/elvis-chip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-chip",
-  "version": "1.2.5-beta.0",
+  "version": "1.2.5",
   "description": "",
   "license": "MIT",
   "author": "",
