--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint-all": "yarn run prettier-elvis && yarn run prettier-doc && yarn run prettier-comp && yarn run eslint",
     "component-tests": "cd packages/components; yarn test && echo SUCCESS",
     "test:staged": "cd packages/components; jest --bail --findRelatedTests",
-    "publish": "yarn workspaces foreach -ipv --no-private npm publish --access public"
+    "publish": "yarn workspaces foreach -ipv --no-private npm publish --access public",
+    "percy": "cd packages/elvis && yarn percy"
   },
   "husky": {
     "hooks": {
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@date-io/core": "^1.3.6",
+    "@percy/cli": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
     "@vue/cli-service": "4.5.13",
