--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -9,9 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install
-        run: npm install
       - name: Percy Test
-        run: npm run percy
+        run: cd packages/elvis && npx @percy/cli snapshot ./percy
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
