--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -8,15 +8,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
-    "watch": "gulp watch",
-    "percy": "percy snapshot ./percy"
+    "watch": "gulp watch"
   },
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
     "bootstrap": "4.6.1"
   },
   "devDependencies": {
-    "@percy/cli": "^1.1.0",
     "del": "^6.0.0",
     "doiuse": "^4.4.0",
     "express": "^4.17.2",
