--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
     "zone.js": "~0.11.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.39"
   }
 }
