--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
     "watch": "gulp watch",
-    "percy": "node testing/server.js & percy exec -- node testing/snapshots.js"
+    "percy": "node testing/server.js & npx percy exec -- node testing/snapshots.js"
   },
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
