--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Percy Test
         # run: cd packages/elvis && npx @percy/cli snapshot ./percy
-        run: cd packages/elvis && yarn percy
+        run: cd packages/elvis && npm run percy
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
