--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install
+        run: npm install
       - name: Percy Test
         # run: cd packages/elvis && npx @percy/cli snapshot ./percy
         run: cd packages/elvis && npm run percy
