--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install
-        run: npm install
-      - name: Percy Test
-        # run: cd packages/elvis && npx @percy/cli snapshot ./percy
-        run: cd packages/elvis && npm run percy
+      # - name: Install
+      #   run: npm install
+      - name: Percy Elvis
+        run: cd packages/elvis && npx @percy/cli snapshot ./percy/snapshots.json
+        # run: cd packages/elvis && npm run percy
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
