--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -9,15 +9,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
     "watch": "gulp watch",
-    "percy": "node testing/server.js & percy exec -- node testing/snapshots2.mjs"
+    "percy": "node testing/server.js & percy exec -- node testing/snapshots.js"
   },
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
     "bootstrap": "4.6.1"
   },
   "devDependencies": {
-    "@percy/cli": "^1.1.0",
-    "@percy/core": "^1.1.0",
     "del": "^6.0.0",
     "doiuse": "^4.4.0",
     "express": "^4.17.2",
