--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -9,8 +9,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # - name: Install
-      #   run: npm install
+      - name: Install
+        run: npm install
+      - name: Serve
+        run: cd packages/elvis && node testing/server.js
       - name: Percy Elvis
         run: cd packages/elvis && npx @percy/cli snapshot ./percy/snapshots.json
         # run: cd packages/elvis && node testing/server.js & npx @percy/cli snapshot ./percy/snapshots.json
