--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -11,11 +11,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Install
         run: npm install
-      - name: Serve
-        run: cd packages/elvis && node testing/server.js
       - name: Percy Elvis
-        run: cd packages/elvis && npx @percy/cli snapshot ./percy/snapshots.json
-        # run: cd packages/elvis && node testing/server.js & npx @percy/cli snapshot ./percy/snapshots.json
+        run: cd packages/elvis && npm run percy:serve & npm run percy:test
+        # run: cd packages/elvis && node testing/server.js & npx @percy/cli snapshot percy/snapshots.json
         # run: cd packages/elvis && npm run percy
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
