--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -9,13 +9,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'npm'
       - name: Install
         run: npm install
       - name: Percy Elvis
         run: |
           cd packages/elvis
           node testing/server.js & 
-          npx @percy/cli snapshot percy/snapshots.json
-        # run: cd packages/elvis && node testing/server.js & npx @percy/cli snapshot percy/snapshots.json
+          npx @percy/cli snapshot percy/snapshots.yml
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
