change percy method

--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Npm Cache
+        uses: actions/setup-node@v3
         with:
           cache: 'npm'
       - name: Install
