--- a/packages/web/angular.json
+++ b/packages/web/angular.json
@@ -105,15 +105,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "CHANGELOG.md",
-                "input": "../elvis",
-                "output": "./assets/elvis"
-              }
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
             "scripts": []
           }
