--- a/packages/components/components/elvis-card/package.json
+++ b/packages/components/components/elvis-card/package.json
@@ -12,6 +12,7 @@
     "@elvia/elvis-colors": "^1.2.0",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "^1.1.1",
+    "@elvia/elvis-toolbox": "^1.3.0",
     "@elvia/elvis-typography": "^1.2.0",
     "styled-components": "^5.3.3"
   },
