--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,6 +41,7 @@
     "@elvia/elvis-pagination": "*",
     "@elvia/elvis-popover": "*",
     "@elvia/elvis-progress-linear": "*",
+    "@elvia/elvis-spotlight": "*",
     "@elvia/elvis-tabs": "*",
     "@types/lodash.debounce": "^4.0.6",
     "classlist.js": "^1.1.20150312",
