--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
     functions = "functions"
-    
+
+[build.environment]
+    YARN_VERSION = "3.2.0"
+
 [context.deploy-preview]
     # ignore all PRs opened by `dependabot` (with last commit made by `dependabot`)
     ignore = 'git log -1 --pretty=%B | grep dependabot'
