--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@elvia/elvis-colors",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "Elvia colors",
   "license": "MIT",
   "author": "",
-  "main": "src/elviaColors.js",
-  "style": "src/elviaColors.scss",
+  "main": "dist/elviaColors.js",
+  "types": "dist/elviaColors.d.ts",
+  "style": "dist/elviaColors.scss",
   "scripts": {
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +15,9 @@
     "lodash.kebabcase": "^4.1.1"
   },
   "devDependencies": {
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-header": "^2.0.9",
     "gulp-prettier": "^4.0.0"
   }
 }
