--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -15,6 +15,7 @@
     "lodash.kebabcase": "^4.1.1"
   },
   "devDependencies": {
+    "@types/lodash.kebabcase": "^4.1.7",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-header": "^2.0.9",
