--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -4,7 +4,7 @@
   "description": "Elvia colors",
   "license": "MIT",
   "author": "",
-  "main": "src/elviaColors.js",
+  "main": "dist/elviaColors.js",
   "style": "src/elviaColors.scss",
   "scripts": {
     "build": "gulp",
