--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "",
   "main": "dist/elviaColors.js",
-  "style": "src/elviaColors.scss",
+  "style": "dist/elviaColors.scss",
   "scripts": {
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
