get elvis colors from elvis-colors

--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
+    "@elvia/elvis-colors": "^1.4.1",
     "bootstrap": "4.6.1"
   },
   "devDependencies": {
