Lego 1417: Use Elvis-colors for colors in Elvis (#806)

--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis",
-  "version": "8.3.9",
+  "version": "8.3.10",
   "description": "Elvia design system",
   "license": "ISC",
   "author": "",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
+    "@elvia/elvis-colors": "^1.4.1",
     "bootstrap": "4.6.1"
   },
   "devDependencies": {
