--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -43,12 +43,14 @@
     "gulp-sass": "^5.1.0",
     "gulp-tap": "^2.0.0",
     "jest": "^27.0.1",
+    "jest-styled-components": "^7.0.8",
     "jsdom": "^16.6.0",
     "merge-stream": "^2.0.0",
     "mocha": "^8.4.0",
     "react": "^17.0.0-0",
     "react-dom": "^17.0.0-0",
     "react-is": ">= 16.8.0",
+    "react-test-renderer": "^17.0.2",
     "style-loader": "^1.2.1",
     "styled-components": ">= 2",
     "ts-loader": "^8.0.3",
