--- a/packages/components/components/elvis-modal/package.json
+++ b/packages/components/components/elvis-modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-modal",
-  "version": "1.5.1",
+  "version": "2.0.0",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -12,6 +12,7 @@
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "^1.1.1",
+    "@elvia/elvis-toolbox": "^1.3.1",
     "@elvia/elvis-typography": "^1.2.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
