add getTypographyCss function

--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -23,6 +23,7 @@
     "@elvia/elvis-spotlight": "*",
     "@elvia/elvis-tabs": "*",
     "@elvia/elvis-testing": "*",
+    "@elvia/elvis-typography": "*",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "^12.1.10",
