--- a/packages/components/components/elvis-breadcrumb/package.json
+++ b/packages/components/components/elvis-breadcrumb/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@elvia/elvis-toolbox": "^1.3.1",
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "^1.1.1",
