--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -43,6 +43,7 @@
     "@elvia/elvis-progress-linear": "*",
     "@elvia/elvis-spotlight": "*",
     "@elvia/elvis-tabs": "*",
+    "@elvia/elvis-typography": "*",
     "@types/lodash.debounce": "^4.0.6",
     "classlist.js": "^1.1.20150312",
     "contentful": "^8.5.8",
