--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,13 +10,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: '@yarnpkg/plugin-interactive-tools'
 
-yarnPath: .yarn/releases/yarn-berry.js
-
-packageExtensions:
-  # awaiting fix: https://github.com/facebook/create-react-app/issues/11982
-  'eslint-plugin-flowtype@*':
-    peerDependenciesMeta:
-      '@babel/plugin-syntax-flow':
-        optional: true
-      '@babel/plugin-transform-react-jsx':
-        optional: true
+yarnPath: .yarn/releases/yarn-3.2.1.cjs
