--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "zone.js": "~0.11.4"
   },
   "resolutions": {
-    "@types/react": "17.0.39"
-  }
+    "@types/react": "17.0.39",
+    "@elvia/elvis-toolbox": "portal:./packages/components/components/elvis-toolbox"
+  },
+  "packageManager": "yarn@3.2.1"
 }
