--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -5,11 +5,14 @@
     "baseUrl": "./",
     "module": "es2020",
     "outDir": "./dist/out-tsc",
+    "paths": {
+      "@elvia/elvis-toolbox": ["../components/components/elvis-toolbox/"] // Make web listen to changes to toolbox
+    },
 
     "noImplicitReturns": false, // TODO: Remove line -> fix errors
-    "noImplicitThis": false,    // TODO: Remove line -> fix errors
-    "noImplicitAny": false,     // TODO: Remove line -> fix errors
-    "strictNullChecks": false,  // TODO: Remove line -> fix errors
+    "noImplicitThis": false, // TODO: Remove line -> fix errors
+    "noImplicitAny": false, // TODO: Remove line -> fix errors
+    "strictNullChecks": false // TODO: Remove line -> fix errors
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
