dropdown placeholder positioning fix

--- a/packages/components/components/elvis-dropdown/package.json
+++ b/packages/components/components/elvis-dropdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-dropdown",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.uniqueid": "^4.0.1",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "react-is": ">= 16.8.0"
