--- a/packages/components/components/elvis-datepicker-range/package.json
+++ b/packages/components/components/elvis-datepicker-range/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@elvia/elvis-datepicker",
-  "version": "3.0.0",
+  "name": "@elvia/elvis-datepicker-range",
+  "version": "1.0.0",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -11,22 +11,13 @@
   "dependencies": {
     "@date-io/core": "^1.3.6",
     "@date-io/date-fns": "^1.3.13",
-    "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.3.3",
-    "@elvia/elvis-icon": "^1.1.1",
-    "@elvia/elvis-toolbox": "^1.2.1",
-    "@material-ui/core": "4.12.3",
-    "@material-ui/pickers": "3.3.10",
-    "classnames": "^2.3.1",
+    "@elvia/elvis-datepicker": "^3.0.0",
     "date-fns": "^2.27.0",
-    "prop-types": "^15.6.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0"
-  },
-  "peerDependencies": {
-    "@date-io/core": "^1.3.6",
-    "prop-types": "^15.6.0"
   }
 }
