Lego-1826: fix datepicker selected date highlighting (#910)
* fix datepicker selected date highlighting

* update PR label logic for design.elvia.io

* fix date range hovered highlighting when keyboard navigating

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -5,7 +5,12 @@ dependencies:
   - yarn.lock
 
 design.elvia.io:
-  - packages/web/**/*
+  - any:
+      [
+        'packages/web/**/*',
+        '!packages/web/src/assets/changelogs/**/*',
+        '!packages/web/src/assets/js/elvis.js',
+      ]
 
 elvis:
   - packages/elvis/**/*
