--- a/packages/components/components/elvis-datepicker/package.json
+++ b/packages/components/components/elvis-datepicker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-datepicker",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -26,7 +26,8 @@
     "react-dom": "^16.8.0 || ^17.0.0"
   },
   "peerDependencies": {
-    "@date-io/core": "^1.3.6",
-    "prop-types": "^15.6.0"
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
+    "react-is": "^16.8.0 || ^17.0.0"
   }
 }
