--- a/packages/web/angular.json
+++ b/packages/web/angular.json
@@ -51,7 +51,13 @@
                 "output": "./assets/contentful/dist/"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss",
+              "./node_modules/@elvia/elvis-datepicker/dist/react/js/style.css",
+              "./node_modules/@elvia/elvis-progress-linear/dist/react/js/style.css",
+              "./node_modules/@elvia/elvis-tabs/dist/react/js/style.css",
+              "./node_modules/@elvia/elvis-popover/dist/react/js/style.css"
+            ],
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
