Revert "Lego-1827: Update to react 18 (#941)"
This reverts commit 9285f39371a801e81e60f6f93422de8998958611.

--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-accordion",
-  "version": "2.6.1",
+  "version": "2.6.0",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -17,13 +17,13 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "react": "^17.0.0 || ^18.1.0",
-    "react-dom": "^17.0.0 || ^18.1.0",
-    "react-is": "^16.8.0  || ^17.0.0 || ^18.1.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-is": "^16.8.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.1.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.1.0",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
     "react-is": ">= 16.8.0"
   }
 }
