--- a/package.json
+++ b/package.json
@@ -71,14 +71,17 @@
     "express": "^4.17.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
-    "react": "^17.0.0 || ^18.1.0",
-    "react-dom": "^17.0.0 || ^18.1.0",
-    "react-is": ">= 17.0.0",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
+    "react-is": ">= 16.8.0",
     "rxjs": "^6.5.3",
     "safe-json-stringify": "^1.2.0",
     "tslint": "~6.1.0",
     "typescript": "~4.7.2",
     "zone.js": "~0.11.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.39"
   },
   "packageManager": "yarn@3.2.1"
 }
