--- a/packages/components/components/elvis-component-wrapper/package.json
+++ b/packages/components/components/elvis-component-wrapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-component-wrapper",
-  "version": "2.4.2",
+  "version": "2.4.1",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -13,8 +13,8 @@
     "@elvia/elvis-toolbox": "^1.3.2",
     "json5": "^2.2.1",
     "lodash.isequal": "^4.5.0",
-    "react": "^17.0.0 || ^18.1.0",
-    "react-dom": "^17.0.0 || ^18.1.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/lodash.isequal": "^4.5.5",
