--- a/packages/components/components/elvis-datepicker/package.json
+++ b/packages/components/components/elvis-datepicker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-datepicker",
-  "version": "3.1.1",
+  "version": "3.1.0",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -22,12 +22,12 @@
     "prop-types": "^15.6.0"
   },
   "devDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.1.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.1.0"
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.1.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.1.0",
-    "react-is": "^16.8.0 || ^17.0.0 || ^18.1.0"
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
+    "react-is": "^16.8.0 || ^17.0.0"
   }
 }
