--- a/packages/components/components/elvis-divider/package.json
+++ b/packages/components/components/elvis-divider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-divider",
-  "version": "1.4.1",
+  "version": "1.4.0",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -14,8 +14,8 @@
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.1.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.1.0",
-    "react-is": "^16.8.0 || ^17.0.0 || ^18.1.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-is": ">=16.8.0"
   }
 }
