--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -46,8 +46,8 @@
     "jsdom": "^16.6.0",
     "merge-stream": "^2.0.0",
     "mocha": "^8.4.0",
-    "react": "^17.0.0 || ^18.1.0",
-    "react-dom": "^17.0.0 || ^18.1.0",
+    "react": "^17.0.0-0",
+    "react-dom": "^17.0.0-0",
     "react-is": ">= 16.8.0",
     "style-loader": "^1.2.1",
     "styled-components": ">= 2",
