--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-colors",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "Elvia colors",
   "license": "MIT",
   "author": "",
@@ -18,6 +18,7 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-header": "^2.0.9",
-    "gulp-prettier": "^4.0.0"
+    "gulp-prettier": "^4.0.0",
+    "gulp-tap": "^2.0.0"
   }
 }
