--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -8,7 +8,7 @@
   "style": "dist/elviaColors.scss",
   "scripts": {
     "build": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:production": "gulp"
   },
   "dependencies": {
     "lodash.kebabcase": "^4.1.1"
