--- a/package.json
+++ b/package.json
@@ -9,25 +9,32 @@
     ]
   },
   "scripts": {
-    "start:web": "cd packages/web && yarn contentful && yarn start",
-    "start:components": "yarn build:colors && yarn build:typography && cd packages/components && yarn watch",
-    "start:elvis": "cd packages/elvis && yarn watch",
-    "start:react": "cd packages/components/frameworks/react-ssr && yarn start",
-    "start:vue": "cd packages/components/frameworks/vue-test && yarn start",
-    "build:components": "yarn build:colors && yarn build:typography && cd packages/components && yarn build",
-    "build:web": "yarn && yarn build:colors && yarn build:typography && cd packages/elvis-assets-icons && yarn run build && cd ../components && yarn run build:production && cd ../web && yarn run contentful:production && yarn run build:production && cd ../components/frameworks/react-ssr && yarn run production",
-    "build:elvis": "cd packages/elvis && yarn build",
-    "build:colors": "cd packages/elvis-colors && yarn build",
-    "build:typography": "cd packages/elvis-typography && yarn build",
+    "build": "yarn && nx run-many --target=build:production",
+    "build:web": "nx run elvia-designsystem:build",
+    "build:components": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-components",
+    "build:elvis": "nx run @elvia/elvis:build",
+    "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography",
+    "build:colors": "nx run @elvia/elvis-colors:build",
+    "build:typography": "nx run @elvia/elvis-typography:build",
+    "build:icons": "nx run @elvia/elvis-assets-icons:build",
+    "start:web": "yarn contentful && nx start elvia-designsystem",
+    "start:components": "yarn build:tokens && nx start @elvia/elvis-components",
+    "start:elvis": "nx start @elvia/elvis",
+    "start:react": "nx start react-ssr",
+    "start:vue": "nx start vue-preview",
+    "start:icons": "nx start @elvia/elvis-assets-icons",
     "contentful": "cd packages/web && yarn contentful",
-    "prettier-elvis": "yarn prettier --write \"packages/elvis/**/*.js\"",
-    "prettier-doc": "yarn prettier --write \"packages/web/src/**/*.ts\"",
-    "prettier-comp": "yarn prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
+    "contentful:production": "cd packages/web && yarn contentful:production",
+    "prettier-elvis": "prettier --write \"packages/elvis/**/*.js\"",
+    "prettier-doc": "prettier --write \"packages/web/src/**/*.ts\"",
+    "prettier-comp": "prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
     "eslint": "./node_modules/.bin/eslint --fix \"./**/*.{js,ts,tsx}\"",
-    "lint-all": "yarn run prettier-elvis && yarn run prettier-doc && yarn run prettier-comp && yarn run eslint",
-    "component-tests": "cd packages/components; yarn test && echo SUCCESS",
+    "lint-all": "yarn prettier-elvis && yarn prettier-doc && yarn prettier-comp && yarn eslint",
+    "test": "nx test @elvia/elvis-components",
     "test:staged": "cd packages/components; jest --bail --findRelatedTests",
-    "publish": "yarn workspaces foreach -ipv --no-private npm publish --access public"
+    "publish": "yarn workspaces foreach -ipv --no-private npm publish --access public",
+    "nx:graph": "yarn nx graph",
+    "nx:clear": "yarn nx clear-cache"
   },
   "husky": {
     "hooks": {
@@ -38,18 +45,18 @@
   "lint-staged": {
     "packages/elvis/**/*.+(md|css|sass|less|graphql|yml|yaml|scss|json|vue)": [
       "./scripts/elvis-pre-commit.sh",
-      "yarn run prettier-elvis",
+      "yarn prettier-elvis",
       "git add"
     ],
     "packages/web/**/*.+(js|ts|tsx)": [
-      "yarn run prettier-doc",
-      "yarn run eslint",
+      "yarn prettier-doc",
+      "yarn eslint",
       "git add"
     ],
     "packages/components/components/**/*.+(js|ts|tsx)": [
-      "yarn run prettier-comp",
-      "yarn run eslint",
-      "yarn test:staged",
+      "yarn prettier-comp",
+      "yarn eslint",
+      "yarn test",
       "git add"
     ]
   },
@@ -61,6 +68,7 @@
   },
   "devDependencies": {
     "@date-io/core": "^1.3.6",
+    "@nrwl/nx-cloud": "latest",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
@@ -71,6 +79,7 @@
     "express": "^4.17.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
+    "nx": "14.5.10",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "react-is": ">= 16.8.0",
