--- a/packages/elvis-typography/package.json
+++ b/packages/elvis-typography/package.json
@@ -7,8 +7,8 @@
   "main": "dist/elviaTypography.js",
   "style": "dist/elviaTypography.scss",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp"
+    "build": "gulp",
+    "build:production": "gulp"
   },
   "devDependencies": {
     "del": "^6.0.0",
