--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,12 +6,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:production": "ng build --configuration production",
+    "build:production": "yarn contentful:production && ng build --configuration production",
     "contentful": "cd contentful && node syncFromContentful.js",
     "contentful:production": "cd contentful && NODE_ENV=production node syncFromContentful.js",
     "contentful:types": "cd contentful && contentful-typescript-codegen --output types.d.ts",
-    "dev": "yarn run contentful & yarn run start",
-    "test": "ng test",
     "e2e": "ng e2e"
   },
   "dependencies": {
@@ -54,7 +52,6 @@
     "fuse.js": "^6.6.2",
     "glob": "^7.1.6",
     "natural-compare-lite": "^1.4.0",
-    "ng-dynamic-component": "^10.0.0",
     "ngx-markdown": "^13.1.0",
     "prettier": "^2.0.5",
     "prismjs": "^1.24.1",
