--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -10,6 +10,12 @@
     "build": "gulp",
     "build:production": "gulp"
   },
+  "nx": {
+    "implicitDependencies": [
+      "@elvia/elvis-colors",
+      "@elvia/elvis-typography"
+    ]
+  },
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
     "@elvia/elvis-colors": "^1.4.1",
