--- a/packages/elvis-assets-icons/package.json
+++ b/packages/elvis-assets-icons/package.json
@@ -7,8 +7,7 @@
   "main": "icons.js",
   "scripts": {
     "start": "gulp watch",
-    "build": "gulp",
-    "build:production": "gulp"
+    "build": "gulp"
   },
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.1"
