--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     ]
   },
   "scripts": {
-    "build": "yarn && yarn build:tokens && nx run-many --target=build:production",
+    "build": "yarn && yarn build:tokens && nx run-many --target=build:production --exclude=react-ssr && nx build:production react-ssr",
     "build:web": "nx run elvia-designsystem:build",
-    "build:components": "nx build @elvia/elvis-components",
+    "build:components": "yarn build:tokens && nx build @elvia/elvis-components",
     "build:elvis": "nx build @elvia/elvis",
     "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-assets-icons",
     "build:colors": "nx build @elvia/elvis-colors",
